--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,14 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.6.7",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.3"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+		"dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=14.20.1"
