--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-icons": "^1.10.3",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
