--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,16 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.6.7",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.10",
+    "nodemon": "^3.0.3",
+    "otp-generator": "^4.0.1"
   },
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-		"dev": "nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "engines": {
     "node": ">=14.20.1"
