--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "react-datepicker": "^4.24.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-otp-input": "^3.1.1",
     "react-router-dom": "^6.20.1",
     "react-script": "^2.0.5",
     "react-scripts": "5.0.1",
