--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-icons": "^1.10.3",
     "react-datepicker": "^4.24.0",
